--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   <meta property="og:url" content="https://divyeshrupawala.github.io/AlphaMentor/"/>
   <meta property="og:site_name" content="My Site 1"/>
   <meta property="og:type" content="website"/>
-  <script type="application/ld+json">{"@context":"https://schema.org/","@type":"WebSite","url":"https://www.unibullcapital.com/","potentialAction":{"@type":"SearchAction","target":{"@type":"EntryPoint","urlTemplate":"https://www.unibullcapital.com/search?q={search_term}"},"query-input":"required name=search_term"}}</script>
+  <!-- <script type="application/ld+json">{"@context":"https://schema.org/","@type":"WebSite","url":"https://www.unibullcapital.com/","potentialAction":{"@type":"SearchAction","target":{"@type":"EntryPoint","urlTemplate":"https://www.unibullcapital.com/search?q={search_term}"},"query-input":"required name=search_term"}}</script> -->
   <link rel="alternate" href="https://www.unibullcapital.com/blog-feed.xml" type="application/rss+xml" title="My Site 1 - RSS"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:title" content="Home | My Site 1"/>
